[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "l0-field-agent"
version = "0.1.0"
description = "L0 Field Device Agent (reduced POC) — structured-data OT asset inventory"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
